Bug 1067634: Wrap "will-change" decl in @supports rule, to prevent browser console spam while it's disabled by default. r=heycam
UltraBlame original commit: c62eaab73c383c51053bbc9a504698f261ca32b2

--- a/layout/style/full-screen-override.css
+++ b/layout/style/full-screen-override.css
@@ -21,6 +21,14 @@
   clip: initial !important;
   transform: initial !important;
   
-  will-change: initial !important;
+}
+
+
+
+
+@supports (will-change: initial) {
+  *|*:-moz-full-screen-ancestor {
+    will-change: initial !important;
+  }
 }
 
